[package]
name = "chess-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy = { version = "0.18.0"}
bevy = { version = "0.18.0", features = ["dynamic_linking"] }


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"